--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,6 +31,16 @@ body {
 
 body::-webkit-scrollbar {
   display: none;
+  width: 0;
+  height: 0;
+}
+
+body::-webkit-scrollbar-track {
+  display: none;
+}
+
+body::-webkit-scrollbar-thumb {
+  display: none;
 }
 
 #root {
@@ -38,6 +48,15 @@ body::-webkit-scrollbar {
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  /* Hide scrollbar for root element */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#root::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
 }
 
 /* Custom scrollbar hide */
